<resources>
    <string name="app_name">crearICv2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="contacto">Contacto</string>
    <string name="direcciones">Direcciones</string>
    <string name="id_direccion">ID Direccion</string>
    <string name="identificador">Identificador</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_de_la_calle">Nombre de la calle</string>
    <string name="calle">Calle</string>
    <string name="tipo_de_calle">Tipo de calle</string>
    <string name="ciudad">Ciudad</string>
    <string name="localidad">Localidad</string>
    <string name="estado">Estado</string>
    <string name="comunidad">Comunidad</string>
    <string name="pais">Pais</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="es_gb_usa">ES, GB, USA</string>
    <string name="ejemplo_39001">Ejemplo: 39001</string>
    <string name="direcciones_destino">Direcciones Destino</string>
    <string name="loggin">Loggin</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="pagos">pagos</string>
    <string name="destino">destino</string>
    <string name="c_digo">Código</string>
    <string name="name">Name</string>
    <string name="nombre_fiscal">Nombre Fiscal</string>
    <string name="id_interlocutor">ID Interlocutor</string>
    <string name="nombre_de_ic">Nombre de IC</string>
    <string name="nif">NIF</string>
    <string name="n_mero_de_referencia">Número de referencia</string>
    <string name="tipo_de_ic">Tipo de IC</string>
    <string name="cliente_proveedor_o_lead">Cliente, Proveedor o Lead</string>
    <string name="tel_fono">Teléfono</string>
    <string name="n_telefono">Nº Telefono</string>
    <string name="datos_generales_ic">Datos Generales IC</string>
    <string name="email_ic">Email IC</string>
    <string name="contacto_ic">Contacto IC</string>
    <string name="strg_idcontacto">Name</string>
    <string name="txtviewcontacto">ID Contacto</string>
    <string name="txtview_Nombre">Nombre</string>
    <string name="txt_nombrecontactoIC">Name</string>
    <string name="txtview_emailcontacto">Email</string>
    <string name="txt_emailstring">Name</string>
    <string name="nombre_del_contacto">Nombre del contacto</string>
    <string name="email_contacto">Email contacto</string>
    <string name="id_del_contacto">Id del contacto</string>
</resources>